--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- Styles -->
@@ -42,7 +43,7 @@
           <li><a href="pages/blog.html" data-i18n="nav.blog">Blog</a></li>
           <li><a href="index.html#contact" data-i18n="nav.contact">Contact</a></li>
           <li id="lang-toggle-li"><button id="lang-toggle" class="btn btn-outline" style="padding: 5px 10px; font-size: 12px; margin-left: 0;">ES</button></li>
-          <li><a href="#" class="btn btn-filled" data-i18n="nav.resume">Resume</a></li>
+          <li><a href="./assets/cv_rperez.pdf" target="_blank" class="btn btn-filled" data-i18n="nav.resume">Resume</a></li>
         </ul>
         <div class="hamburger">
           <i data-feather="menu"></i>
@@ -67,7 +68,7 @@
           </p>
           <div class="hero-btns">
             <a href="#expertise" class="btn btn-primary" data-i18n="hero.btnExpertise">View Expertise</a>
-            <a href="#" class="btn btn-outline" data-i18n="hero.btnCv">Download CV</a>
+            <a href="./assets/cv_rperez.pdf" target="_blank" class="btn btn-outline" data-i18n="hero.btnCv">Download CV</a>
           </div>
         </div>
       </section>
@@ -105,35 +106,29 @@
         <div class="expertise-grid">
           <!-- Column 1 -->
           <div class="expertise-card">
-            <div class="card-icon"><i data-feather="terminal"></i></div>
-            <h3 data-i18n="expertise.card1.title">Cybersecurity & Operations</h3>
+            <div class="card-icon"><i class="fas fa-code-branch"></i></div>
+            <h3 data-i18n="expertise.card1.title">SecDevOps & Engineering</h3>
+            <p class="card-subtitle" data-i18n="expertise.card1.subtitle" style="color: var(--teal); font-family: 'Roboto Mono', monospace; font-size: 0.9em; margin-bottom: 15px;">"Secure by Design"</p>
             <ul id="expertise-list-1">
-              <li>Incident Response</li>
-              <li>Blue Team Ops</li>
-              <li>Zero Trust Architecture</li>
-              <li>Threat Hunting</li>
+              <!-- Filled via JS -->
             </ul>
           </div>
           <!-- Column 2 -->
           <div class="expertise-card">
-            <div class="card-icon"><i data-feather="check-square"></i></div>
-            <h3 data-i18n="expertise.card2.title">GRC & Auditing</h3>
+            <div class="card-icon"><i class="fas fa-clipboard-check"></i></div>
+            <h3 data-i18n="expertise.card2.title">Governance & Strategy</h3>
+            <p class="card-subtitle" data-i18n="expertise.card2.subtitle" style="color: var(--teal); font-family: 'Roboto Mono', monospace; font-size: 0.9em; margin-bottom: 15px;">"Aligned with Business"</p>
             <ul id="expertise-list-2">
-              <li>ISO 27001 Implementation</li>
-              <li>ENS Compliance</li>
-              <li>GDPR / LOPD</li>
-              <li>IT Risk Management</li>
+               <!-- Filled via JS -->
             </ul>
           </div>
           <!-- Column 3 -->
           <div class="expertise-card">
-            <div class="card-icon"><i data-feather="users"></i></div>
-            <h3 data-i18n="expertise.card3.title">Leadership & Academia</h3>
+            <div class="card-icon"><i class="fas fa-shield-alt"></i></div>
+            <h3 data-i18n="expertise.card3.title">Threat Operations</h3>
+            <p class="card-subtitle" data-i18n="expertise.card3.subtitle" style="color: var(--teal); font-family: 'Roboto Mono', monospace; font-size: 0.9em; margin-bottom: 15px;">"Active Defense"</p>
             <ul id="expertise-list-3">
-              <li>IT Project Management</li>
-              <li>University Teaching</li>
-              <li>Team Leadership</li>
-              <li>Strategic Planning</li>
+               <!-- Filled via JS -->
             </ul>
           </div>
         </div>
