Actualizacion 1.3: index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1 class="hero-title" data-i18n="hero.title">Securing Critical Infrastructure.</h1>
           <!--<p style="color: var(--teal); font-family: 'Roboto Mono', monospace; margin-top: 5px; margin-bottom: 5px;" data-i18n="hero.location">Based in Madrid</p>-->
           <h2 class="hero-subtitle" data-i18n="hero.subtitle">
-            Through Strategy, Compliance, and Advanced Operations.
+            Through Development, Governance, and Security Operations.
           </h2>
           <p class="hero-desc" data-i18n="hero.desc">
             From National Police IT Leadership to European Cybersecurity
