--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li><a href="#expertise" data-i18n="nav.expertise">Expertise</a></li>
           <li><a href="#experience" data-i18n="nav.experience">Experience</a></li>
           <li><a href="pages/academy.html" class="active" style="display: flex; align-items: center; color: var(--teal);"><span data-i18n="nav.academy">Academy</span><span class="glowing-dot"></span></a></li>
-          <li><a href="pages/blog.html" data-i18n="nav.blog">Blog</a></li>
+          <li><a href="pages/article.html" data-i18n="nav.article">Article</a></li>
           <li><a href="index.html#contact" data-i18n="nav.contact">Contact</a></li>
           <li id="lang-toggle-li"><button id="lang-toggle" class="btn btn-outline" style="padding: 5px 10px; font-size: 12px; margin-left: 0;">ES</button></li>
           <li><a href="./assets/cv_rperez.pdf" target="_blank" class="btn btn-filled" data-i18n="nav.resume">Resume</a></li>
