--- a/pages/academy.html
+++ b/pages/academy.html
@@ -34,7 +34,7 @@
           <li><a href="../index.html#expertise" data-i18n="nav.expertise">Expertise</a></li>
           <li><a href="../index.html#experience" data-i18n="nav.experience">Experience</a></li>
           <li><a href="academy.html" class="active" style="color: var(--teal);" data-i18n="nav.academy">Academy</a></li>
-          <li><a href="blog.html" data-i18n="nav.blog">Blog</a></li>
+          <li><a href="article.html" data-i18n="nav.blog">Article</a></li>
           <li><a href="../index.html#contact" data-i18n="nav.contact">Contact</a></li>
           <li id="lang-toggle-li"><button id="lang-toggle" class="btn btn-outline" style="padding: 5px 10px; font-size: 12px; margin-left: 0;">ES</button></li>
           <li><a href="#" class="btn btn-outline" data-i18n="nav.resume">Download CV</a></li>
