Update: about me and translations

--- a/index.html
+++ b/index.html
@@ -85,11 +85,10 @@
               security projects.
             </p>
             <p data-i18n="about.p2">
-              Currently pursuing my Master's at CEU San Pablo Madrid, I combine
-              deep technical knowledge in Blue Team Operations and Threat
-              Hunting with rigorous academic insight. My goal is to apply
-              this unique blend of operational grit and strategic oversight to the
-              private sector.
+              Beyond my technical work, I have dedicated part of my career to academia as a University Professor, teaching Systems Engineering and Cybersecurity.
+            </p>
+            <p data-i18n="about.p3">
+              Currently based in Madrid, I am finalizing my Master’s at CEU San Pablo. My focus is on integrating my experience in secure operations with advancements in Artificial Intelligence, with the goal of bringing the balance of technical expertise and strategy that companies require today.
             </p>
           </div>
           <div class="about-img">
