--- a/pages/article.html
+++ b/pages/article.html
@@ -42,14 +42,14 @@
           <a href="../index.html">Rafael Pérez Llorca</a>
         </div>
         <ul class="nav-links">
-          <li><a href="../index.html#about" data-i18n="nav.about">About</a></li>
-          <li><a href="../index.html#expertise" data-i18n="nav.expertise">Expertise</a></li>
-          <li><a href="../index.html#experience" data-i18n="nav.experience">Experience</a></li>
-          <li><a href="academy.html" style="display: flex; align-items: center; color: var(--teal);"><span data-i18n="nav.academy">Academy</span><span class="glowing-dot"></span></a></li>
-          <li><a href="article.html" data-i18n="nav.article" class="active">Article</a></li>
-          <li><a href="../index.html#contact" data-i18n="nav.contact">Contact</a></li>
+          <li><a href="../index.html#about"><span data-i18n="nav.about">About</span><span class="glowing-dot"></span></a></li>
+          <li><a href="../index.html#expertise"><span data-i18n="nav.expertise">Expertise</span><span class="glowing-dot"></span></a></li>
+          <li><a href="../index.html#experience"><span data-i18n="nav.experience">Experience</span><span class="glowing-dot"></span></a></li>
+          <li><a href="academy.html"><span data-i18n="nav.academy">Academy</span><span class="glowing-dot"></span></a></li>
+          <li><a href="article.html" class="active"><span data-i18n="nav.article">Article</span><span class="glowing-dot"></span></a></li>
+          <li><a href="../index.html#contact"><span data-i18n="nav.contact">Contact</span><span class="glowing-dot"></span></a></li>
           <li id="lang-toggle-li"><button id="lang-toggle" class="btn btn-outline" style="padding: 5px 10px; font-size: 12px; margin-left: 0;">ES</button></li>
-          <li><a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled" data-i18n="nav.resume">Resume</a></li>
+          <li><a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Resume</span></a></li>
         </ul>
         <div class="hamburger">
           <i data-feather="menu"></i>
