--- a/index.html
+++ b/index.html
@@ -3,11 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rafael Pérez Llorca - Ciberseguridad</title>
+    <title>Rafael Pérez Llorca - Systems Engineer & Informatics Engineer | Cybersecurity Specialist</title>
+    <link rel="canonical" href="https://rafaelperezllorca.com/" />
+    <link rel="icon" type="image/png" href="images/foto_perfil.png" />
+
     <meta
       name="description"
-      content="Portfolio of a Cybersecurity Engineer specializing in Critical Infrastructure, GRC, and Blue Team Operations."
+      content="Portfolio of a Systems Engineer & Cybersecurity Specialist. 10+ years exp in National Police of Peru (PNP) & European Strategy (Madrid). Expert in SecDevOps, GRC, ISO 27001, Blue Team & Security. Ingeniero de Sistemas especializado en Infraestructura Crítica."
     />
+
+    <meta name="keywords" content="Rafael Pérez Llorca, Systems Engineer, Informatics Engineer, Cybersecurity Engineer, Ciberseguridad Perú, Ciberseguridad España, PNP, Policía Nacional del Perú, GRC, ISO 27001, CISO, CEU San Pablo, Universidad César Vallejo, Lima, Madrid, Threat Hunting, Inteligencia Artificial">
+    
+    <meta name="author" content="Rafael Pérez Llorca">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="profile" />
+    <meta property="og:title" content="Rafael Pérez Llorca | Systems Engineer & Cybersecurity Specialist" />
+    <meta property="og:description" content="Securing Critical Infrastructure through Development & Governance. From Peru's National Police Leadership to European Cyber Defense." />
+    <meta property="og:image" content="https://rafaelperezllorca.com/images/foto_perfil.png" />
+    <meta property="og:url" content="https://rafaelperezllorca.com/" />
+    <meta property="og:site_name" content="Rafael Pérez Llorca Portfolio" />
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:locale:alternate" content="es_PE" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rafael Pérez Llorca | Systems Engineer & Cybersecurity Specialist" />
+    <meta name="twitter:description" content="Securing Critical Infrastructure through Development & Governance. From Peru's National Police Leadership to European Cyber Defense." />
+    <meta name="twitter:image" content="https://rafaelperezllorca.com/images/foto_perfil.png" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Rafael Pérez Llorca",
+      "jobTitle": "Systems and Informatics Engineer & Cybersecurity Specialist",
+      "url": "https://rafaelperezllorca.com",
+      "sameAs": [
+        "https://www.linkedin.com/in/rperezll/",
+        "https://github.com/leafar1087"
+      ],
+      "alumniOf": [
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "Universidad CEU San Pablo",
+          "sameAs": "https://www.uspceu.com/"
+        },
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "Universidad César Vallejo",
+          "sameAs": "https://www.ucv.edu.pe/"
+        }
+      ],
+      "knowsAbout": ["Cybersecurity", "Critical Infrastructure", "GRC", "National Police IT", "Python", "Artificial Intelligence"],
+      "workLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Madrid",
+          "addressCountry": "ES"
+        }
+      },
+      "description": "Expert in bridging technical operations and executive governance, with deep experience in the Peruvian Public Sector and European Academic Insight."
+    }
+    </script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -264,7 +325,7 @@
           government, and consultancy sectors.
         </p>
         <div class="contact-buttons">
-          <a href="mailto:email@example.com" class="btn btn-primary big-btn" data-i18n="contact.btnContact"
+          <a href="mailto:contacto@rafaelperezllorca.com" class="btn btn-primary big-btn" data-i18n="contact.btnContact"
             >Contact Me</a
           >
           <a
