--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rafael Pérez Llorca - Systems Engineer & Informatics Engineer | Cybersecurity Specialist</title>
     <link rel="canonical" href="https://rafaelperezllorca.com/" />
-    <link rel="icon" type="image/png" href="images/foto_perfil.png" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <meta
       name="description"
-      content="Portfolio of a Systems Engineer & Cybersecurity Specialist. 10+ years exp in National Police of Peru (PNP) & European Strategy (Madrid). Expert in SecDevOps, GRC, ISO 27001, Blue Team & Security. Ingeniero de Sistemas especializado en Infraestructura Crítica."
+      content="Portfolio of a Systems & Informatics Engineer with a Cybersecurity Specialist. 10+ years exp in National Police of Peru (PNP) & European Strategy (Madrid). Expert in SecDevOps, GRC, ISO 27001, Blue Team & Security. Ingeniero de Sistemas especializado en Infraestructura Crítica."
     />
 
-    <meta name="keywords" content="Rafael Pérez Llorca, Systems Engineer, Informatics Engineer, Cybersecurity Engineer, Ciberseguridad Perú, Ciberseguridad España, PNP, Policía Nacional del Perú, GRC, ISO 27001, CISO, CEU San Pablo, Universidad César Vallejo, Lima, Madrid, Threat Hunting, Inteligencia Artificial">
+    <meta name="keywords" content="Rafael Pérez Llorca, Rafael Pérez, Rafael Antonio Pérez Llorca, Systems Engineer, Informatics Engineer, Cybersecurity Engineer, Ciberseguridad Perú, Ciberseguridad España, PNP, Policía Nacional del Perú, GRC, ISO 27001, CISO, CEU San Pablo, Universidad César Vallejo, Lima, Madrid, Threat Hunting, Inteligencia Artificial">
     
     <meta name="author" content="Rafael Pérez Llorca">
     <meta name="robots" content="index, follow">
