--- a/pages/article.html
+++ b/pages/article.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rafael Pérez Llorca - Article</title>
+    <link rel="icon" type="image/png" href="../images/favicon.png" />
     <meta
       name="description"
       content="Technical article on Cybersecurity, Blue Team Operations, and GRC."
