Actualizacion: SEO - IA

--- a/pages/academy.html
+++ b/pages/academy.html
@@ -9,6 +9,58 @@
       name="description"
       content="Cyber Academy: Executive & Technical Training in Cybersecurity, Auditing, and Governance."
     />
+    
+    <!-- Schema.org Course Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "item": {
+            "@type": "Course",
+            "name": "SQL para Auditores",
+            "description": "Domina las consultas de datos para detectar anomalías y validar integridad sin depender de herramientas.",
+            "provider": {
+              "@type": "Organization",
+              "name": "Rafael Pérez Llorca Academy",
+              "sameAs": "https://rafaelperezllorca.com"
+            }
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "item": {
+            "@type": "Course",
+            "name": "Gobernanza de Ciberseguridad",
+            "description": "Alinea las operaciones de TI con la estrategia empresarial y marcos de cumplimiento (ISO, ENS).",
+            "provider": {
+              "@type": "Organization",
+              "name": "Rafael Pérez Llorca Academy",
+              "sameAs": "https://rafaelperezllorca.com"
+            }
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "item": {
+            "@type": "Course",
+            "name": "Threat Hunting 101",
+            "description": "Búsqueda proactiva de ciberamenazas que evaden las soluciones de seguridad existentes.",
+            "provider": {
+              "@type": "Organization",
+              "name": "Rafael Pérez Llorca Academy",
+              "sameAs": "https://rafaelperezllorca.com"
+            }
+          }
+        }
+      ]
+    }
+    </script>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -41,13 +93,13 @@
           
           <!-- Mobile Actions -->
           <li class="mobile-only" id="lang-toggle-li-mobile"><button class="btn btn-outline lang-toggle-btn" style="padding: 5px 10px; font-size: 12px; margin-left: 0;">ES</button></li>
-          <li class="mobile-only"><a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a></li>
+          <!-- <li class="mobile-only"><a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a></li> -->
         </ul>
 
         <!-- Desktop Actions -->
         <div class="nav-actions desktop-only">
             <button class="btn btn-outline lang-toggle-btn" style="padding: 5px 10px; font-size: 12px;">ES</button>
-            <a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a>
+            <!-- <a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a> -->
         </div>
 
         <div class="hamburger">
