--- a/pages/article.html
+++ b/pages/article.html
@@ -10,6 +10,22 @@
       content="Artículo técnico sobre Ciberseguridad, Operaciones Blue Team y GRC."
     />
 
+    <!-- Schema.org Blog Context -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Blog",
+      "name": "Rafael Pérez Llorca - Technical Blog",
+      "description": "Artículos técnicos, investigaciones y tutoriales sobre Ciberseguridad y GRC.",
+      "url": "https://rafaelperezllorca.com/pages/article.html",
+      "author": {
+          "@type": "Person",
+          "name": "Rafael Pérez Llorca",
+          "url": "https://rafaelperezllorca.com"
+      }
+    }
+    </script>
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,13 +69,13 @@
           
           <!-- Mobile Actions -->
           <li class="mobile-only" id="lang-toggle-li-mobile"><button class="btn btn-outline lang-toggle-btn" style="padding: 5px 10px; font-size: 12px; margin-left: 0;">ES</button></li>
-          <li class="mobile-only"><a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a></li>
+          <!-- <li class="mobile-only"><a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a></li> -->
         </ul>
 
         <!-- Desktop Actions -->
         <div class="nav-actions desktop-only">
             <button class="btn btn-outline lang-toggle-btn" style="padding: 5px 10px; font-size: 12px;">ES</button>
-            <a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a>
+            <!-- <a href="../assets/cv_rperez.pdf" target="_blank" class="btn btn-filled"><span data-i18n="nav.resume">Descargar CV</span></a> -->
         </div>
 
         <div class="hamburger">
