--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -49,11 +49,12 @@
         </div>
 
         <div style="margin-bottom: 30px;">
-            <h2 style="font-size: 20px; color: var(--lightest-slate); margin-bottom: 15px;" data-i18n="privacyPage.section2.title">2. FINALIDAD DEL TRATAMIENTO</h2>
-            <p style="margin-bottom: 15px;" data-i18n="privacyPage.section2.intro">Tratamos la información que nos facilita con las siguientes finalidades:</p>
+            <h2 style="font-size: 20px; color: var(--lightest-slate); margin-bottom: 15px;" data-i18n="privacyPage.section2.title">2. DATOS RECOGIDOS Y FINALIDAD</h2>
+            <p style="margin-bottom: 15px;" data-i18n="privacyPage.section2.intro">Este sitio web ha sido diseñado bajo el principio de <strong>Minimización de Datos</strong> (Privacy by Design):</p>
             <ul style="list-style: disc; padding-left: 20px;">
-                 <li style="margin-bottom: 10px;"><span data-i18n="[html]privacyPage.section2.item1"><strong>Contacto Profesional:</strong> Para responder a consultas de selección, propuestas laborales o solicitudes de consultoría.</span></li>
-                 <li><span data-i18n="[html]privacyPage.section2.item2"><strong>Academia y Formación:</strong> Para gestionar su inscripción en 'Listas de Espera' para cursos técnicos (ej. SQL para Auditores) y notificarle cuando estén disponibles.</span></li>
+                 <li style="margin-bottom: 10px;"><span data-i18n="[html]privacyPage.section2.item1"><strong>Formularios:</strong> No existen formularios de contacto que almacenen datos en una base de datos. El contacto se realiza exclusivamente a través de su cliente de correo (enlaces 'mailto') o LinkedIn.</span></li>
+                 <li style="margin-bottom: 10px;"><span data-i18n="[html]privacyPage.section2.item2"><strong>Cookies y Rastreo:</strong> No utilizamos cookies de terceros ni herramientas de análisis invasivas (como Google Analytics).</span></li>
+                 <li><span data-i18n="[html]privacyPage.section2.item3"><strong>Almacenamiento Local:</strong> Utilizamos únicamente <code>localStorage</code> del navegador para recordar su preferencia de idioma (ES/EN). Este dato es técnico, no le identifica personalmente y reside solo en su dispositivo.</span></li>
             </ul>
         </div>
 
