Actualizacion SEO - linkedin

--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
           <a
             href="https://www.linkedin.com/in/rperezll/"
             target="_blank"
+            rel="me"
             class="btn btn-outline big-btn"
           >
             <i data-feather="linkedin"></i> LinkedIn
@@ -516,6 +517,7 @@
           <a
             href="https://www.linkedin.com/in/rperezll/"
             target="_blank"
+            rel="me"
             aria-label="LinkedIn"
             ><i data-feather="linkedin"></i
           ></a>
