--- a/pages/academy.html
+++ b/pages/academy.html
@@ -193,7 +193,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-socials">
-          <a href="https://www.linkedin.com/in/rperezll/" target="_blank" aria-label="LinkedIn"><i data-feather="linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/rperezll/" target="_blank" rel="me" aria-label="LinkedIn"><i data-feather="linkedin"></i></a>
           <a href="mailto:email@example.com" aria-label="Email"><i data-feather="mail"></i></a>
         </div>
         <div class="footer-links">
